# newrelic-opamp-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.md.tmpl
.github/: renovate.json  renovate.json5
.github/workflows/: check.yaml  component_security.yaml  coverage.yaml  docs.yaml  on_demand_generate_prerelease_pr.yml  on_pr_check_changelog.yml  on_push_pr.yaml  release.yml  repolinter.yml  security.yaml  test.yaml
opamp-client/: Cargo.toml
opamp-client/examples/: async_http_client.rs  simple_http_client.rs  sync_http_client.rs
opamp-client/src/: async_client.rs  async_client_error.rs  async_error.rs  client.rs  error.rs  httpclient.rs  lib.rs  sync_client.rs  sync_error.rs
opamp-client/src/common/: asyncsender.rs  client.rs  clientstate.rs  compression.rs  message_processor.rs  mod.rs  nextmessage.rs  transport.rs
opamp-client/src/common/http/: compression.rs  mod.rs  sender.rs  transport.rs
opamp-client/src/http/: client.rs  config.rs  http_client.rs  managed_client.rs  mod.rs  sender.rs  ticker.rs
opamp-client/src/http/async/: client.rs  http_client.rs  managed_client.rs  mod.rs  sender.rs  ticker.rs
opamp-client/src/http/sync/: client.rs  http_client.rs  managed_client.rs  mod.rs  sender.rs  ticker.rs
opamp-client/src/operation/: agent.rs  callbacks.rs  capabilities.rs  instance_uid.rs  mod.rs  packages.rs  settings.rs  syncedstate.rs
opamp-server/: Cargo.toml  build.rs
opamp-server/src/: lib.rs
opamp-server/src/http/: handler.rs  mod.rs  server.rs  transport.rs
proto/: Cargo.toml  Makefile  build.rs  debug.rs  opamp.proto.rs
proto/src/: impls.rs  lib.rs  main.rs  proto.rs
