[workspace]
resolver = "2"

members = ["opamp-client", "proto"]

[workspace.package]
authors = ["The New Relic Agent Control Team"]
edition = "2024"
rust-version = "1.89.0"
license-file = "LICENSE.md"

[workspace.dependencies]
prost = "0.14.2"
prost-build = "0.14.2"
crossbeam = "0.8.4"
thiserror = "2.0.17"
url = "2.5.7"
tracing = "0.1.44"
http = "1.4"
libflate = "2.2.1"
tracing-subscriber = "0.3.22"
httpmock = "0.8.2"
mockall = "0.14"
tracing-test = "0.2.5"
reqwest = "0.12.28"
assert_matches = "1.5"
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v7"] }
