[workspace]
resolver = "2"

members = ["opamp-client", "proto"]

[workspace.package]
authors = ["The New Relic Agent Control Team"]
edition = "2024"
rust-version = "1.93.0"
license-file = "LICENSE.md"

[workspace.dependencies]
prost = "0.14.3"
prost-build = "0.14.3"
crossbeam = "0.8.4"
thiserror = "2.0.18"
url = "2.5.8"
tracing = "0.1.44"
http = "1.4"
libflate = "2.2.1"
tracing-subscriber = "0.3.22"
httpmock = "0.8.3"
mockall = "0.14"
tracing-test = "0.2.6"
reqwest = "0.13.2"
assert_matches = "1.5"
rand = "0.10.0"
uuid = { version = "1.20.0", features = ["v7"] }
