[workspace]
resolver = "2"

members = ["opamp-client", "proto"]

[workspace.package]
authors = ["The New Relic Agent Control Team"]
edition = "2024"
rust-version = "1.97.1"
license-file = "LICENSE.md"

[workspace.dependencies]
prost = "0.14.4"
prost-build = "0.14.4"
crossbeam = "0.8.4"
thiserror = "2.0.19"
url = "2.5.8"
tracing = "0.1.44"
http = "1.4.2"
libflate = "2.3.0"
tracing-subscriber = "0.3.23"
httpmock = "0.8.3"
mockall = "0.15.0"
tracing-test = "0.2.6"
reqwest = "0.13.4"
assert_matches = "1.5"
rand = "0.10.2"
rstest = "0.26.1"
uuid = { version = "1.24.0", features = ["v7"] }
