[package]
name = "opamp-client"
version = "0.0.32"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
httpmock.workspace = true
mockall.workspace = true
tracing-test.workspace = true
ureq = { workspace = true, features = ["http-interop"] }
assert_matches.workspace = true
rand.workspace = true
url.workspace = true

[dependencies]
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
uuid.workspace = true
prost.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
libflate.workspace = true
proto = { path = "../proto" }
