[package]
name = "opamp-server"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.8"

[dependencies]
bytes = "1.4.0"
prost = "0.11.8"
hyper = {version = "0.14.24", features=["http2", "server", "tcp"], optional = true}
thiserror = "1.0.38"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"], optional = true }
futures = "0.3.26"
strum = "0.24.1"
strum_macros = "0.24.3"

[features]
default = ["server"]
server = ["hyper", "tokio"]
